...
        navController.navigate(Routes.Profile.route)
    }
    else
        authenticating.value = false

    Box(
        modifier = Modifier.fillMaxSize().testTag("LoginPage"),
        contentAlignment = Alignment.Center,

    ) {
        Column(
            modifier = Modifier
                .verticalScroll(rememberScrollState())
...
            horizontalAlignment = Alignment.CenterHorizontally
        ) {

            val email = remember { mutableStateOf(TextFieldValue()) }
            val password = remember { mutableStateOf(TextFieldValue()) }

            Text(text = "Login", color = Color.DarkGray, style = TextStyle(fontSize = 50.sp))

            Spacer(modifier = Modifier.height(relative(20.dp)))

            if(windowInfo.screenWidthInfo == WindowInfo.WindowType.Expanded){
                OutlinedTextField(
                    colors = TextFieldDefaults.outlinedTextFieldColors(
...
                        focusedTextColor = Color.DarkGray,
                        unfocusedTextColor = Color.DarkGray
                    ),
                    modifier = Modifier
                        .width(windowInfo.screenWidth.div(2))
                        .height(windowInfo.screenHeight.div(18))
                        .testTag("mailTextField"),
                    label = { Text(text = "Mail") },
                    value = email.value,
                    onValueChange = { email.value = it },
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next),
                    singleLine = true,
                    shape = RoundedCornerShape(10.dp),
...
                        focusedTextColor = Color.DarkGray,
                        unfocusedTextColor = Color.DarkGray
                    ),
                    modifier = Modifier
                        .width(windowInfo.screenWidth.div(2))
                        .height(windowInfo.screenHeight.div(18))
                        .testTag("passwordTextField"),
                    label = { Text(text = "Password")},
                    value = password.value,
                    visualTransformation = PasswordVisualTransformation(),
                    keyboardOptions = KeyboardOptions(
                        keyboardType = KeyboardType.Password,
                        imeAction = ImeAction.Done
...
                                .requestEmail()
                                .build()
                            val googleSignInClient = GoogleSignIn.getClient(context, gso)
                            launcher.launch(googleSignInClient.signInIntent)
                        }
                    }
                    .testTag("GoogleButton"),
                shape = MaterialTheme.shapes.medium,
                border = BorderStroke(width = 1.dp, color = Color.LightGray),
                color = MaterialTheme.colorScheme.surface
            ) {
                Row(
                    modifier = Modifier
...

        Box(modifier = Modifier
            .fillMaxHeight(0.9f)
            .fillMaxWidth(), Alignment.BottomCenter){
            Row(verticalAlignment = Alignment.CenterVertically) {
                Text(
                    text = AnnotatedString("Not registered yet?"),
                    color = Color.DarkGray,
                    modifier = Modifier
                        .padding(5.dp, 0.dp),
                    style = TextStyle(
                        fontSize = 18.sp,
                        fontFamily = FontFamily.Default,
...
                    )
                }

 */

                ClickableText(
                    text = AnnotatedString("Create now!"),
                    modifier = Modifier
                        .padding(5.dp, 0.dp),
                    onClick = {
                        //here we should implement the navigation to the Sign Up Screen
                        navController.navigate(Routes.SignUp.route)
                    },
...
