...
    navController: NavHostController,
    sharedViewModel: SharedViewModel,
    showBackButton : Boolean = false,
    backRoute : String = ""
){
    TopAppBar(
        modifier = Modifier.testTag("AppToolBar"),
        title = {
            Text(
                text = title,
                style = TextStyle(
                    fontSize = 24.sp,
                    fontWeight = FontWeight.Normal,
...
                }

                firebaseAuth.addAuthStateListener(authStateListener)
            }) {
                Icon(
                    imageVector = Icons.Filled.Logout,
                    contentDescription = "Logout"
                )
            }

        },
        colors = TopAppBarDefaults.topAppBarColors(
            containerColor = PrimaryColor,
...
