...
    Column(
        modifier = Modifier
            .fillMaxWidth()
            .background(color = Color.LightGray.copy(alpha = 0.2f), RoundedCornerShape(10.dp))
            .border(1.dp, Color.Gray, RoundedCornerShape(10.dp))
            .padding(10.dp)
            .testTag("SkillListBlock"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(10.dp)
    ) {

        if(sortingType == SortingType.Custom){
            Row (modifier = Modifier.fillMaxWidth()){
                IconButton(
                    modifier = Modifier.weight(1.0f),
                    onClick = { onSwapRequest(index, true) }
                )
                {
                    Icon(imageVector = Icons.Default.ArrowUpward, tint = Color.DarkGray, contentDescription = "ArrowUp")
                }

                IconButton(
                    modifier = Modifier.weight(1.0f),
                    onClick = { onSwapRequest(index, false) }
                )
                {
                    Icon(imageVector = Icons.Default.ArrowDownward, tint = Color.DarkGray, contentDescription = "ArrowDown")
                }
            }
        }

        Row(modifier = Modifier.fillMaxWidth(),
            verticalAlignment = Alignment.CenterVertically
...
                onClick = {
                    onOpenMenu(index)
                }
            ) {
                Icon(
                    imageVector = Icons.Filled.Menu,
                    contentDescription = "MenuButton"
                )
            }


        }

...
                        .weight(1f)
                        .padding(horizontal = 10.dp),
                )

                Text(
                    modifier = Modifier.padding(8.dp),
                    text = "Tasks",
                    color = Color.DarkGray,
                    fontSize = 18.sp
                )

                Divider(
                    color = Color.DarkGray,
...
                    modifier = Modifier
                        .padding(vertical = 20.dp)
                ) {
                    Text(
                        fontSize = 20.sp,
                        color = Color.White,
                        text = "Finish"
                    )
                }
            }
        }

    }
...
        }
    }

    Scaffold(
        topBar = { AppToolBar(title = "My Skills", navController, sharedViewModel) },
        bottomBar = {
            BottomNavigationBar(navController = navController, openDialog, pendingRoute)
        }
    ) { innerPadding ->

        Column(
            modifier = Modifier
                .padding(innerPadding)
                .fillMaxSize()
                .verticalScroll(rememberScrollState())
                .testTag("MySkillsScreen"),
            horizontalAlignment = Alignment.CenterHorizontally,
            //verticalArrangement = Arrangement.spacedBy(16.dp),
        ) {
            Box(modifier = Modifier
                .padding(vertical = 20.dp, horizontal = 5.dp)
                .background(Color.LightGray.copy(alpha = 0.2f), RoundedCornerShape(10.dp))
...
                            fontSize = 20.sp,
                            color = Color.DarkGray,
                        )
                        Icon(
                            imageVector = Icons.Default.ArrowDropDown,
                            tint = Color.DarkGray,
                            contentDescription = "OrderingArrow",
                        )

                        DropdownMenu(
                            modifier = Modifier.padding(top = 10.dp),
                            expanded = sortingMenuExp.value,
                            onDismissRequest = { sortingMenuExp.value = false }
...
                            DropdownMenuItem(text = { Text(text = "Custom") }, onClick = {
                                sortingMenuExp.value = false
                                sortingType.value = SortingType.Custom
                                listCompleteStructures.value = sharedViewModel.RecomputeList(listCompleteStructures.value, sortingType.value, userSkillSub.value.customOrdering)
                            })

                            DropdownMenuItem(text = { Text(text = "Starting Date Asc") }, onClick = {
                                sortingMenuExp.value = false
                                sortingType.value = SortingType.DateAsc
                                listCompleteStructures.value = sharedViewModel.RecomputeList(listCompleteStructures.value, sortingType.value, userSkillSub.value.customOrdering)
                            })
                            DropdownMenuItem(text = { Text(text = "Starting Date Desc") }, onClick = {
                                sortingMenuExp.value = false
                                sortingType.value = SortingType.DateDesc
                                listCompleteStructures.value = sharedViewModel.RecomputeList(listCompleteStructures.value, sortingType.value, userSkillSub.value.customOrdering)
                            })
                        }
                    }
...
